{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "PlayerShip",
            "id": "40e0c021-8b2b-47c2-8c09-0c07232be718",
            "actions": [
                {
                    "name": "MouseCameraMovement",
                    "type": "PassThrough",
                    "id": "79c76f7d-7069-4fd2-bbcf-8c723260f903",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Movement",
                    "type": "Button",
                    "id": "a45dd632-7566-4c7b-b7b2-eb9b6bc79c2a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "AlignWithCamera",
                    "type": "Button",
                    "id": "e5de1bfa-6c14-42be-b71f-37d99f8fa03e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateAlongX",
                    "type": "Button",
                    "id": "20e14b37-b7b0-4820-8f7e-a77e462901f1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateAlongY",
                    "type": "Button",
                    "id": "4d9f5733-9df1-4dcb-b328-d24e8011a84d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateAlongZ",
                    "type": "Button",
                    "id": "9de35a2d-9a5d-47cb-9cb7-2a34e5948d36",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleTractorBeam",
                    "type": "Button",
                    "id": "0546c9aa-ea63-4dcc-8469-54bf924fb546",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleDrill",
                    "type": "Button",
                    "id": "eb13f302-d11f-4eed-b75f-da5959c0e791",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleGasCollector",
                    "type": "Button",
                    "id": "30a32f41-8864-45a9-b2bf-8e92cbd67098",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InstrumentPrimary",
                    "type": "Button",
                    "id": "06370757-8d74-438c-a5fc-234cf5f42477",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InstrumentSecondary",
                    "type": "Button",
                    "id": "b2505daa-6e37-4b97-b0f0-9b1bbd690924",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0ca67ec3-3ae5-49d7-b7da-19364fa81e10",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseCameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Forward/Backward",
                    "id": "852620a6-d135-49fd-b8ad-90d2ec75860f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "75c27e4a-f1c2-4f53-96b2-1dabc1cd531a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "97857c57-7643-4bc2-a9ee-09a83bca7171",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "398f6a8d-73ab-4f23-8e8b-60c0333971a9",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AlignWithCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up/Down",
                    "id": "c15f978c-efcf-44b6-ac9c-95685c47a1ad",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateAlongX",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "f31702fa-3d26-4b90-8118-669824d83f54",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateAlongX",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "e653d19b-d44c-4a81-b4e5-fa78089d56c0",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateAlongX",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left/Right",
                    "id": "7497a25c-121b-4579-a5ac-667863ad3957",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateAlongY",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "f133044d-e21c-4947-b839-4b9e9306a16c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateAlongY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "aa1bdbf1-fd54-4347-9d54-72747c44101c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateAlongY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "LeftTilt/RightTilt",
                    "id": "c7198939-499a-4fa1-a516-d490a2f636c2",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateAlongZ",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "eba4ecc4-1d6b-4fb8-8c18-01ecab94f1bc",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateAlongZ",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "a11563c6-5314-44fe-86a5-1d8b9b205929",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateAlongZ",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "71cc4386-c5e5-411c-969f-63611f2d9ed5",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleDrill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da645384-fbff-45ab-9ca9-b4c431cc0d1e",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleGasCollector",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e09b738-071e-4b68-b10c-9dc2634a031f",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleTractorBeam",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "169f05d3-c038-47c4-ae33-d1d2626bb92a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InstrumentPrimary",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "12e15f89-592b-4bca-8f66-9946a559425b",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InstrumentSecondary",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}